[gd_scene load_steps=31 format=2]

[ext_resource path="res://FuelBar.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://ship/sheep_cropped.png" type="Texture" id=3]
[ext_resource path="res://UI.png" type="Texture" id=4]
[ext_resource path="res://ship/flame.png" type="Texture" id=5]
[ext_resource path="res://rainbowBar.png" type="Texture" id=6]
[ext_resource path="res://ship/explosion.png" type="Texture" id=7]
[ext_resource path="res://paused.png" type="Texture" id=12]
[ext_resource path="res://Compass.gd" type="Script" id=13]
[ext_resource path="res://Inventory.gd" type="Script" id=14]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.701961, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 1, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 2, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 3, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 4, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 5, 0, 1, 1 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 10, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 20, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 30, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 40, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 60, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 70, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 90, 0, 10, 10 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 33 ) ],
"loop": false,
"name": "New Anim",
"speed": 12.0
} ]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.45098, 0.415686, 0.466667, 1 )

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" type="ProgressBar" parent="."]
margin_left = 12.0
margin_top = 62.0
margin_right = 37.0
margin_bottom = 63.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
max_value = 1000.0
value = 99.88
percent_visible = false
script = ExtResource( 1 )

[node name="SpeedMeter" type="TextureProgress" parent="."]
margin_left = 38.0
margin_top = 62.0
margin_right = 63.0
margin_bottom = 63.0
value = 100.0
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compass" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -9.0
margin_right = 9.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" type="Sprite" parent="Compass"]
position = Vector2( 4, 5 )
texture = ExtResource( 3 )
hframes = 16
frame = 4

[node name="Flame1" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 3.5, 6.5 )
frames = SubResource( 11 )
animation = "0"
speed_scale = 2.5

[node name="Flame2" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 5.5, 6.5 )
frames = SubResource( 11 )
animation = "0"
speed_scale = 2.5

[node name="Flame3" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 2.5, 5.5 )
frames = SubResource( 11 )
animation = "0"
speed_scale = 2.5

[node name="Flame4" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 2.5, 3.5 )
frames = SubResource( 11 )
animation = "0"
frame = 5
speed_scale = 2.5

[node name="Flame5" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 3.5, 2.5 )
frames = SubResource( 11 )
animation = "0"
speed_scale = 2.5

[node name="Flame6" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 5.5, 2.5 )
frames = SubResource( 11 )
animation = "0"
speed_scale = 2.5

[node name="Flame7" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 6.5, 3.5 )
frames = SubResource( 11 )
animation = "0"
frame = 5
speed_scale = 2.5

[node name="Flame8" type="AnimatedSprite" parent="Compass"]
visible = false
position = Vector2( 6.5, 5.5 )
frames = SubResource( 11 )
animation = "0"
frame = 4
speed_scale = 2.5

[node name="ExplosionSprite" type="AnimatedSprite" parent="Compass"]
position = Vector2( 4, 5 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 34 )
animation = "New Anim"
frame = 8
playing = true

[node name="Inventory" type="Control" parent="."]
margin_left = 11.0
margin_top = 58.0
margin_right = 64.0
margin_bottom = 61.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ProgressBar" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 13 )
max_value = 53.0
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceBar" type="HBoxContainer" parent="Inventory"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -2.0
margin_right = -1.0
margin_bottom = -1.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="ColorRect" parent="Inventory/ResourceBar"]
margin_right = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
color = Color( 0.133333, 0.12549, 0.203922, 1 )

[node name="Resource2" type="ColorRect" parent="Inventory/ResourceBar"]
margin_left = 2.0
margin_right = 3.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
color = Color( 0.792157, 0.827451, 0.92549, 0.168627 )

[node name="Resource3" type="ColorRect" parent="Inventory/ResourceBar"]
margin_left = 4.0
margin_right = 5.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )

[node name="Resource4" type="ColorRect" parent="Inventory/ResourceBar"]
margin_left = 6.0
margin_right = 7.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )

[node name="Resource5" type="ColorRect" parent="Inventory/ResourceBar"]
margin_left = 8.0
margin_right = 9.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
color = Color( 0.952941, 0.027451, 0.027451, 1 )

[node name="MiningProgress" type="ProgressBar" parent="."]
margin_left = 10.0
margin_top = 63.0
margin_right = 14.0
margin_bottom = 64.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
max_value = 10.0
step = 1.0
value = 6.0
percent_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.227451, 0.227451, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
anchor_right = 1.0
margin_top = 13.0
margin_bottom = 18.0
texture = ExtResource( 12 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
